fix: wrong color vars

--- a/apps/gblaster/src/app/player/player.component.scss
+++ b/apps/gblaster/src/app/player/player.component.scss
@@ -37,7 +37,7 @@
 
 ::ng-deep .volume-menu {
   min-width: unset !important;
-  background-color: var(--theme-accent-500) !important;
+  background-color: var(--theme-accent-50) !important;
   @include mat.slider-overrides(
     (
       handle-color: initial,
