--- a/apps/gblaster/src/app/player/playlist/playlist.component.scss
+++ b/apps/gblaster/src/app/player/playlist/playlist.component.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 
   &.selected {
-    border-left: solid 4px var(--theme-accent-500);
+    border-left: solid 4px var(--theme-accent-50);
   }
 }
 
